# gateway/swagger/api/social.swagger.json
@@ -22,6 +22,7 @@
   "paths": {
     "/v1/social/AcceptFriendRequest": {
       "post": {
+        "summary": "AcceptFriendRequest - принять заявку",
         "operationId": "SocialService_AcceptFriendRequest",
         "responses": {
           "200": {
@@ -54,6 +55,7 @@
     },
     "/v1/social/DeclineFriendRequest": {
       "post": {
+        "summary": "DeclineFriendRequest - отклонить заявку",
         "operationId": "SocialService_DeclineFriendRequest",
         "responses": {
           "200": {
@@ -84,8 +86,9 @@
         ]
       }
     },
-    "/v1/social/ListFriends/{userId}": {
+    "/v1/social/ListFriends/{user_id}": {
       "get": {
+        "summary": "ListFriends - получить список друзей",
         "operationId": "SocialService_ListFriends",
         "responses": {
           "200": {
@@ -103,26 +106,30 @@
         },
         "parameters": [
           {
-            "name": "userId",
+            "name": "user_id",
+            "description": "user_id - ID пользователя",
             "in": "path",
             "required": true,
             "type": "string"
           },
           {
             "name": "limit",
+            "description": "limit - количество вывода при пагинации",
             "in": "query",
             "required": false,
             "type": "string",
             "format": "uint64"
           },
           {
-            "name": "cursor.userId",
+            "name": "cursor.user_id",
+            "description": "user_id - ID пользователя",
             "in": "query",
-            "required": false,
+            "required": true,
             "type": "string"
           },
           {
             "name": "cursor.createdAt",
+            "description": "created_at - время с которого начинаем",
             "in": "query",
             "required": false,
             "type": "string",
@@ -134,8 +141,9 @@
         ]
       }
     },
-    "/v1/social/ListRequests/{userId}": {
+    "/v1/social/ListRequests/{user_id}": {
       "get": {
+        "summary": "ListRequests - получить список входящих заявок",
         "operationId": "SocialService_ListRequests",
         "responses": {
           "200": {
@@ -153,7 +161,8 @@
         },
         "parameters": [
           {
-            "name": "userId",
+            "name": "user_id",
+            "description": "user_id - ID пользователя",
             "in": "path",
             "required": true,
             "type": "string"
@@ -164,8 +173,9 @@
         ]
       }
     },
-    "/v1/social/RemoveFriend/{userId}": {
+    "/v1/social/RemoveFriend/{user_id}": {
       "delete": {
+        "summary": "RemoveFriend - удалить из друзей",
         "operationId": "SocialService_RemoveFriend",
         "responses": {
           "200": {
@@ -183,7 +193,8 @@
         },
         "parameters": [
           {
-            "name": "userId",
+            "name": "user_id",
+            "description": "user_id - ID пользователя",
             "in": "path",
             "required": true,
             "type": "string"
@@ -196,6 +207,7 @@
     },
     "/v1/social/SendFriendRequest": {
       "post": {
+        "summary": "SendFriendRequest - отправить заявку в друзья",
         "operationId": "SocialService_SendFriendRequest",
         "responses": {
           "200": {
@@ -269,57 +281,93 @@
     "v1AcceptFriendRequestRequest": {
       "type": "object",
       "properties": {
-        "requestId": {
-          "type": "string"
+        "request_id": {
+          "type": "string",
+          "title": "request_id - ID заявки"
         }
-      }
+      },
+      "title": "AcceptFriendRequestRequest - запрос AcceptFriendRequest",
+      "required": [
+        "request_id"
+      ]
     },
     "v1AcceptFriendRequestResponse": {
       "type": "object",
       "properties": {
         "FriendRequest": {
-          "$ref": "#/definitions/v1FriendRequest"
+          "$ref": "#/definitions/v1FriendRequest",
+          "title": "FriendRequest - принятая заявки со статусом ACCEPTED"
         }
-      }
+      },
+      "title": "AcceptFriendRequestResponse - ответ AcceptFriendRequest"
     },
     "v1Cursor": {
       "type": "object",
       "properties": {
-        "userId": {
-          "type": "string"
+        "user_id": {
+          "type": "string",
+          "title": "user_id - ID пользователя"
         },
         "createdAt": {
           "type": "string",
-          "format": "date-time"
+          "format": "date-time",
+          "title": "created_at - время с которого начинаем"
         }
-      }
+      },
+      "title": "Cursor - курсор для пагинации",
+      "required": [
+        "user_id"
+      ]
     },
     "v1DeclineFriendRequestRequest": {
       "type": "object",
       "properties": {
-        "requestId": {
-          "type": "string"
+        "request_id": {
+          "type": "string",
+          "title": "request_id - ID заявки"
         }
-      }
+      },
+      "title": "DeclineFriendRequestRequest - запрос DeclineFriendRequest",
+      "required": [
+        "request_id"
+      ]
     },
     "v1DeclineFriendRequestResponse": {
       "type": "object",
       "properties": {
         "FriendRequest": {
-          "$ref": "#/definitions/v1FriendRequest"
+          "$ref": "#/definitions/v1FriendRequest",
+          "title": "FriendRequest - отклоненная заявка со статусом DECLINED"
         }
-      }
+      },
+      "title": "DeclineFriendRequestResponse - ответ DeclineFriendRequest"
     },
     "v1FriendRequest": {
       "type": "object",
+      "example": {
+        "request_id": "CD0F7430-FDDA-4E27-8C95-001E18E9CF50",
+        "status": "PENDING|ACCEPTED|DECLINED"
+      },
       "properties": {
         "requestId": {
-          "type": "string"
+          "type": "string",
+          "title": "request_id - ID заявки"
         },
         "status": {
-          "$ref": "#/definitions/apiv1Status"
+          "$ref": "#/definitions/apiv1Status",
+          "title": "status - статус заявки"
         }
-      }
+      },
+      "description": "FriendRequest - информация о заявке в друзья",
+      "title": "FriendRequest",
+      "externalDocs": {
+        "description": "Find out more about ABitOfEverything",
+        "url": "https://github.com/grpc-ecosystem/grpc-gateway"
+      },
+      "required": [
+        "requestId",
+        "status"
+      ]
     },
     "v1ListFriendsResponse": {
       "type": "object",
@@ -328,12 +376,15 @@
           "type": "array",
           "items": {
             "type": "string"
-          }
+          },
+          "title": "friend_user_ids - список друзей"
         },
         "nextCursor": {
-          "$ref": "#/definitions/v1Cursor"
+          "$ref": "#/definitions/v1Cursor",
+          "title": "next_cursor - курсор пагинации"
         }
-      }
+      },
+      "title": "ListFriendsResponse - ответ ListFriends"
     },
     "v1ListRequestsResponse": {
       "type": "object",
@@ -343,28 +394,38 @@
           "items": {
             "type": "object",
             "$ref": "#/definitions/v1FriendRequest"
-          }
+          },
+          "title": "FriendRequest - список входящих заявок"
         }
-      }
+      },
+      "title": "ListRequestsResponse - ответ ListRequests"
     },
     "v1RemoveFriendResponse": {
-      "type": "object"
+      "type": "object",
+      "title": "RemoveFriendResponse - ответ RemoveFriendResponse"
     },
     "v1SendFriendRequestRequest": {
       "type": "object",
       "properties": {
-        "userId": {
-          "type": "string"
+        "user_id": {
+          "type": "string",
+          "title": "user_id - ID пользователя, который приглашается в друзья"
         }
-      }
+      },
+      "title": "SendFriendRequestRequest - запрос SendFriendRequest",
+      "required": [
+        "user_id"
+      ]
     },
     "v1SendFriendRequestResponse": {
       "type": "object",
       "properties": {
         "FriendRequest": {
-          "$ref": "#/definitions/v1FriendRequest"
+          "$ref": "#/definitions/v1FriendRequest",
+          "title": "FriendRequest - заявка в друзья со статусом PENDING"
         }
-      }
+      },
+      "title": "SendFriendRequestResponse - ответ SendFriendRequest"
     }
   }
 }
