# social/internal/app/controllers/social/grpc/v1/converter/sendfriendrequest.go
@@ -1,0 +1,33 @@
+package converter
+
+import (
+	"errors"
+	"github.com/PechatnovVladimir/msa_big_tech/social/internal/app/usecases/social/dto"
+	"github.com/PechatnovVladimir/msa_big_tech/social/pkg/proto/api/social/v1"
+)
+
+func ToSendFriendRequestDTO(in *social.SendFriendRequestRequest) (dto.SendFriendRequestIN, error) {
+	if in == nil {
+		return dto.SendFriendRequestIN{}, errors.New("grpc SendFriendRequestRequest is nil")
+	}
+
+	out := dto.SendFriendRequestIN{
+		UserId: in.UserId,
+	}
+	return out, nil
+}
+
+func FromSendFriendResponseDTO(in dto.SendFriendRequestOUT) (*social.SendFriendRequestResponse, error) {
+	if in.RequestID == "" {
+		return nil, errors.New("RequestID is empty")
+	}
+
+	out := &social.SendFriendRequestResponse{
+		FriendRequest: &social.FriendRequest{
+			RequestId: in.RequestID,
+			Status:    social.Status_PENDING,
+		},
+	}
+
+	return out, nil
+}
