# social/internal/app/usecases/social/dto/sendfriendrequest.go
@@ -1,5 +1,8 @@
 package dto
 
 type SendFriendRequestIN struct {
+	UserId string
 }
-type SendFriendRequestOUT struct{}
+type SendFriendRequestOUT struct {
+	RequestID string
+}
